[gd_scene load_steps=2 format=3 uid="uid://ctr71tk4fcs3h"]

[ext_resource type="Script" path="res://src/scene/hot_word_container/hot_word_container.gd" id="1_7u0xa"]

[node name="HotWordContainer" type="MarginContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7u0xa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2

[node name="HotWordTree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true

[node name="WordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2

[node name="AddHotWordButton" type="Button" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "添加热词"

[connection signal="button_clicked" from="VBoxContainer/HotWordTree" to="." method="_on_hot_word_tree_button_clicked"]
[connection signal="item_activated" from="VBoxContainer/HotWordTree" to="." method="_on_hot_word_tree_item_activated"]
[connection signal="text_submitted" from="VBoxContainer/WordLineEdit" to="." method="_on_word_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/AddHotWordButton" to="." method="_on_add_hot_word_button_pressed"]
